css fix for linebreaks on adresses

--- a/src/CSS/pages/_eventpage.scss
+++ b/src/CSS/pages/_eventpage.scss
@@ -7,6 +7,10 @@
   grid-template-columns: 1fr;
   gap: 50px;
 
+  .adress{
+    white-space: pre-line;
+  }
+
 }
 
 .event-sidebar {
